<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2f5f7"
    tools:context=".Meditation">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.65"
        android:fontFamily="@font/sen_extrabold"
        android:text="Lets\nMeditate"
        android:textColor="#454141"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/chooseLayout"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/songCard"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#F3F3F3"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@+id/exerciseCard"
            app:layout_constraintTop_toTopOf="@id/chooseLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:fontFamily="@font/sen_bold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="@string/song"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/meditate_music" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exerciseCard"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#F3F3F3"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@id/chooseLayout"
            app:layout_constraintTop_toBottomOf="@+id/songCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:fontFamily="@font/sen_bold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="@string/exercise"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/vector" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/chooseMeditation"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/shortMeditation"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#F3F3F3"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@+id/longMeditation"
            app:layout_constraintTop_toTopOf="@id/chooseMeditation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:fontFamily="@font/sen_bold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="@string/short_5_mins"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/stopwatch"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/longMeditation"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#F3F3F3"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@id/chooseMeditation"
            app:layout_constraintTop_toBottomOf="@+id/shortMeditation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:fontFamily="@font/sen_bold"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="@string/long_15_mins"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/stopwatch" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>